cmake_minimum_required(VERSION 2.8.11)
project(Electrombile)

#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu99")
SET(CMAKE_C_FLAGS "-std=c99")
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g3 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
ADD_SUBDIRECTORY(src)
SET(CMAKE_INSTALL_PREFIX /usr/local)