find_package(PkgConfig)
pkg_check_modules (GLIB2  glib-2.0>=2.10)

IF (GLIB2_FOUND)
  include_directories(${GLIB2_INCLUDE_DIRS})
  link_libraries (${GLIB2_LIBRARIES})
ENDIF (GLIB2_FOUND)

INCLUDE_DIRECTORIES(common)
INCLUDE_DIRECTORIES(3rd/cJSON)
INCLUDE_DIRECTORIES(3rd/yunba)

ADD_SUBDIRECTORY(tk115)
ADD_SUBDIRECTORY(simcom)

